fixed video size
video size was too big, no px on it

--- a/styles.css
+++ b/styles.css
@@ -164,8 +164,8 @@
   }
 
   .videoImage{
-    height: 230;
-    width: 410;
+    height: 230px;
+    width: 410px;
     border-style: solid;
     border-width: 5px;
     border-color: white;
